feat(announcement): add announcement component

--- a/.project.md
+++ b/.project.md
@@ -1,5 +1,4 @@
 ### BACKLOG
 
-[x] integrate material-ui
-[x] add namespace to features
-[x] 
+[x] disable TopBar gutters.
+[x] add Announcement.tsx
