refactor(state): update properties name

--- a/.project.md
+++ b/.project.md
@@ -2,5 +2,6 @@
 
 [x] disable TopBar gutters.
 [x] add Announcement.tsx
+[ ] can be hidden undefined 
 [x] the close button in TopBar should float
-[ ] Nav
+[x] Nav
