refactor(offer-page): re-organize the state

--- a/.project.md
+++ b/.project.md
@@ -2,6 +2,7 @@
 
 [x] disable TopBar gutters.
 [x] add Announcement.tsx
-[ ] can be hidden undefined 
+[x] can be hidden undefined 
 [x] the close button in TopBar should float
 [x] Nav
+[ ] Product view
