refactor(offer-page): update the layout

--- a/.project.md
+++ b/.project.md
@@ -1,8 +1,19 @@
 ### BACKLOG
 
 [x] disable TopBar gutters.
+
 [x] add Announcement.tsx
+
 [x] can be hidden undefined 
+
 [x] the close button in TopBar should float
+
 [x] Nav
+
 [ ] Product view
+  [x] split the right column into Zones
+  [ ] feature: add language and pricing selector
+  - https://rapidapi.com/blog/ip-geolocation-api/
+  - https://ipstack.com/product
+
+[ ] FAQ / Live FAQ
