refactor(product-view): (re)orgranize the code

--- a/.project.md
+++ b/.project.md
@@ -1,17 +1,11 @@
+# TODO
+
+
+
 ### BACKLOG
 
-[x] disable TopBar gutters.
-
-[x] add Announcement.tsx
-
-[x] can be hidden undefined 
-
-[x] the close button in TopBar should float
-
-[x] Nav
-
 [ ] Product view
-  [x] split the right column into Zones
+  [x] remove stock value and remplace the content by "Low inventory! Order soon."
   [ ] feature: add language and pricing selector
   - https://rapidapi.com/blog/ip-geolocation-api/
   - https://ipstack.com/product
